--- a/src/scss/containers/_header.scss
+++ b/src/scss/containers/_header.scss
@@ -1,19 +1,34 @@
 header {
-	display: flex;
-	justify-content: space-around;
+	nav {
+		ul {
+			display: flex;
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
-	a {
-		text-decoration: none;
-		color: green;
-		padding: 5px;
+			.spacer {
+				flex: 1;
+			}
 
-		&:hover {
-			text-decoration: underline;
-		}
+			button {
+				padding: 1rem;
+			}
 
-		&.active {
-			color: white;
-			background-color: green;
+			a {
+				color: black;
+				text-decoration: none;
+				display: inline-block;
+				padding: 1rem;
+
+				&:hover {
+					text-decoration: underline;
+				}
+
+				&.active {
+					background-color: #eee;
+				}
+			}
 		}
 	}
 }
